# swagger_server/models/author.py
@@ -1,0 +1,88 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Author(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, name: str=None, url: str=None):  # noqa: E501
+        """Author - a model defined in Swagger
+
+        :param name: The name of this Author.  # noqa: E501
+        :type name: str
+        :param url: The url of this Author.  # noqa: E501
+        :type url: str
+        """
+        self.swagger_types = {
+            'name': str,
+            'url': str
+        }
+
+        self.attribute_map = {
+            'name': 'name',
+            'url': 'url'
+        }
+        self._name = name
+        self._url = url
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Author':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Author of this Author.  # noqa: E501
+        :rtype: Author
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this Author.
+
+
+        :return: The name of this Author.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this Author.
+
+
+        :param name: The name of this Author.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def url(self) -> str:
+        """Gets the url of this Author.
+
+
+        :return: The url of this Author.
+        :rtype: str
+        """
+        return self._url
+
+    @url.setter
+    def url(self, url: str):
+        """Sets the url of this Author.
+
+
+        :param url: The url of this Author.
+        :type url: str
+        """
+
+        self._url = url
