# swagger_server/models/issue.py
@@ -6,7 +6,7 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
-from swagger_server.models.issue_comments import IssueComments  # noqa: F401,E501
+from swagger_server.models.author import Author  # noqa: F401,E501
 from swagger_server.models.issue_labels import IssueLabels  # noqa: F401,E501
 from swagger_server import util
 
@@ -16,13 +16,11 @@ class Issue(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, number: int=None, repo: str=None, title: str=None, url: str=None, state: str=None, body: str=None, author: str=None, labels: List[IssueLabels]=None, comments: IssueComments=None, created_at: datetime=None, updated_at: datetime=None, closed_at: datetime=None):  # noqa: E501
+    def __init__(self, number: int=None, title: str=None, url: str=None, state: str=None, body: str=None, author: Author=None, labels: List[IssueLabels]=None, comments: int=None, created_at: datetime=None, updated_at: datetime=None, closed_at: datetime=None):  # noqa: E501
         """Issue - a model defined in Swagger
 
         :param number: The number of this Issue.  # noqa: E501
         :type number: int
-        :param repo: The repo of this Issue.  # noqa: E501
-        :type repo: str
         :param title: The title of this Issue.  # noqa: E501
         :type title: str
         :param url: The url of this Issue.  # noqa: E501
@@ -32,11 +30,11 @@ class Issue(Model):
         :param body: The body of this Issue.  # noqa: E501
         :type body: str
         :param author: The author of this Issue.  # noqa: E501
-        :type author: str
+        :type author: Author
         :param labels: The labels of this Issue.  # noqa: E501
         :type labels: List[IssueLabels]
         :param comments: The comments of this Issue.  # noqa: E501
-        :type comments: IssueComments
+        :type comments: int
         :param created_at: The created_at of this Issue.  # noqa: E501
         :type created_at: datetime
         :param updated_at: The updated_at of this Issue.  # noqa: E501
@@ -46,14 +44,13 @@ class Issue(Model):
         """
         self.swagger_types = {
             'number': int,
-            'repo': str,
             'title': str,
             'url': str,
             'state': str,
             'body': str,
-            'author': str,
+            'author': Author,
             'labels': List[IssueLabels],
-            'comments': IssueComments,
+            'comments': int,
             'created_at': datetime,
             'updated_at': datetime,
             'closed_at': datetime
@@ -61,7 +58,6 @@ class Issue(Model):
 
         self.attribute_map = {
             'number': 'number',
-            'repo': 'repo',
             'title': 'title',
             'url': 'url',
             'state': 'state',
@@ -74,7 +70,6 @@ class Issue(Model):
             'closed_at': 'closed_at'
         }
         self._number = number
-        self._repo = repo
         self._title = title
         self._url = url
         self._state = state
@@ -117,27 +112,6 @@ class Issue(Model):
         """
 
         self._number = number
-
-    @property
-    def repo(self) -> str:
-        """Gets the repo of this Issue.
-
-
-        :return: The repo of this Issue.
-        :rtype: str
-        """
-        return self._repo
-
-    @repo.setter
-    def repo(self, repo: str):
-        """Sets the repo of this Issue.
-
-
-        :param repo: The repo of this Issue.
-        :type repo: str
-        """
-
-        self._repo = repo
 
     @property
     def title(self) -> str:
@@ -230,22 +204,22 @@ class Issue(Model):
         self._body = body
 
     @property
-    def author(self) -> str:
+    def author(self) -> Author:
         """Gets the author of this Issue.
 
 
         :return: The author of this Issue.
-        :rtype: str
+        :rtype: Author
         """
         return self._author
 
     @author.setter
-    def author(self, author: str):
+    def author(self, author: Author):
         """Sets the author of this Issue.
 
 
         :param author: The author of this Issue.
-        :type author: str
+        :type author: Author
         """
 
         self._author = author
@@ -272,22 +246,22 @@ class Issue(Model):
         self._labels = labels
 
     @property
-    def comments(self) -> IssueComments:
+    def comments(self) -> int:
         """Gets the comments of this Issue.
 
 
         :return: The comments of this Issue.
-        :rtype: IssueComments
+        :rtype: int
         """
         return self._comments
 
     @comments.setter
-    def comments(self, comments: IssueComments):
+    def comments(self, comments: int):
         """Sets the comments of this Issue.
 
 
         :param comments: The comments of this Issue.
-        :type comments: IssueComments
+        :type comments: int
         """
 
         self._comments = comments
