# swagger_server/swagger/swagger.yaml
@@ -332,6 +332,69 @@ paths:
         "500":
           description: Internal Server Error
       x-openapi-router-controller: swagger_server.controllers.repository_controller
+  /repositories/{owner}/{name}/issues/{number}/comments:
+    get:
+      tags:
+      - repository
+      summary: Search issues of the repo by fullname
+      description: Search issues of the repo by fullname
+      operationId: get_comments_of_issue
+      parameters:
+      - name: owner
+        in: path
+        description: The owner of the repository
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+          default: owner
+      - name: name
+        in: path
+        description: The name of the repository
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+          default: name
+      - name: number
+        in: path
+        description: The number of the issue
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+          default: "1"
+      - name: page
+        in: query
+        description: Specify the page number for paginated results (default is 1)
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
+          format: int32
+          default: 1
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                title: CommentsList
+                type: array
+                items:
+                  $ref: '#/components/schemas/Comment'
+                x-content-type: application/json
+        "400":
+          description: Bad Request
+        "422":
+          description: Validation exception
+        "500":
+          description: Internal Server Error
+      x-openapi-router-controller: swagger_server.controllers.repository_controller
   /repositories/{owner}/{name}/statistics:
     get:
       tags:
@@ -488,9 +551,6 @@ components:
       properties:
         number:
           type: integer
-        repo:
-          type: string
-          example: owner/name
         title:
           type: string
         url:
@@ -503,13 +563,14 @@ components:
         body:
           type: string
         author:
-          type: string
+          $ref: '#/components/schemas/Author'
         labels:
           type: array
           items:
             $ref: '#/components/schemas/Issue_labels'
         comments:
-          $ref: '#/components/schemas/Issue_comments'
+          type: integer
+          format: int32
         created_at:
           type: string
           format: date-time
@@ -521,27 +582,12 @@ components:
           format: date-time
       example:
         number: 0
-        comments:
-          total: 6
-          list:
-          - updated_at: 2000-01-23T04:56:07.000+00:00
-            author:
-              name: name
-              association: CONTRIBUTOR
-              url: url
-            created_at: 2000-01-23T04:56:07.000+00:00
-            message: message
-          - updated_at: 2000-01-23T04:56:07.000+00:00
-            author:
-              name: name
-              association: CONTRIBUTOR
-              url: url
-            created_at: 2000-01-23T04:56:07.000+00:00
-            message: message
+        comments: 6
         closed_at: 2000-01-23T04:56:07.000+00:00
         updated_at: 2000-01-23T04:56:07.000+00:00
-        author: author
-        repo: owner/name
+        author:
+          name: name
+          url: url
         created_at: 2000-01-23T04:56:07.000+00:00
         state: OPEN
         title: title
@@ -554,7 +600,7 @@ components:
       type: object
       properties:
         author:
-          $ref: '#/components/schemas/Comment_author'
+          $ref: '#/components/schemas/Author'
         message:
           type: string
         created_at:
@@ -563,11 +609,12 @@ components:
         updated_at:
           type: string
           format: date-time
+        association:
+          type: string
       example:
         updated_at: 2000-01-23T04:56:07.000+00:00
         author:
           name: name
-          association: CONTRIBUTOR
           url: url
         created_at: 2000-01-23T04:56:07.000+00:00
         message: message
@@ -578,50 +625,15 @@ components:
           type: string
       example:
         name: name
-    Issue_comments:
-      type: object
-      properties:
-        total:
-          type: integer
-          format: int32
-        list:
-          type: array
-          items:
-            $ref: '#/components/schemas/Comment'
-      example:
-        total: 6
-        list:
-        - updated_at: 2000-01-23T04:56:07.000+00:00
-          author:
-            name: name
-            association: CONTRIBUTOR
-            url: url
-          created_at: 2000-01-23T04:56:07.000+00:00
-          message: message
-        - updated_at: 2000-01-23T04:56:07.000+00:00
-          author:
-            name: name
-            association: CONTRIBUTOR
-            url: url
-          created_at: 2000-01-23T04:56:07.000+00:00
-          message: message
-    Comment_author:
+    Author:
       type: object
       properties:
         name:
           type: string
         url:
           type: string
-        association:
-          type: string
-          enum:
-          - CONTRIBUTOR
-          - NONE
-          - COLLABORATOR
-          - MEMBER
       example:
         name: name
-        association: CONTRIBUTOR
         url: url
     Statistics:
       type: object
